# Copyright 2023 The ChromiumOS Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_static_library", "rust_test")

rust_library(
    name = "add",
    srcs = ["add.rs"],
)

rust_test(
    name = "add_test",
    crate = ":add",
)

rust_library(
    name = "sub",
    srcs = ["sub.rs"],
)

rust_test(
    name = "sub_test",
    crate = ":sub",
)

cc_library(
    name = "mul",
    srcs = ["mul.cc"],
    deps = [":add"],
)

cc_test(
    name = "mul_test",
    srcs = ["mul_test.cc"],
    deps = [
        ":mul",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "all_test",
    srcs = ["all_test.cc"],
    deps = [
        ":add",
        ":mul",
        ":sub",
        "@com_google_googletest//:gtest_main",
    ],
)
